...
        ),
        actions: <Widget>[
          Row(
            mainAxisAlignment: MainAxisAlignment.center,
            children: [
              TextButton(
                key: const Key('confirmButton'),
                child: Text(
                  AppLocalizations.of(context)!.confirmButton,
                  style: (isDarkTheme)
                      ? kTextButtonStyleDarkMode
                      : kTextButtonStyleLightMode,
                ),
...
