...
                .restorePlaylistAudioMp3FilesFromZipTooltip,
            child: Text(AppLocalizations.of(context)!
                .restorePlaylistAudioMp3FilesFromZipMenu),
          ),
        ),
        PopupMenuItem<PlaylistPopupMenuAction>(
          key: const Key('popup_menu_delete_playlist'),
          value: PlaylistPopupMenuAction.deletePlaylist,
          child: Text(AppLocalizations.of(context)!.deletePlaylist),
        ),
        PopupMenuItem<PlaylistPopupMenuAction>(
          key: const Key('popup_menu_rename_playlist'),
          value: PlaylistPopupMenuAction.renamePlaylist,
...
